[gd_scene load_steps=5 format=3 uid="uid://bl5kby8ys2uft"]

[ext_resource type="Script" uid="uid://dhchpcnrapibx" path="res://Systems/UserInterface/Inventory/inventory_ui.gd" id="1_sp84r"]
[ext_resource type="Script" uid="uid://dey2rbwsybyuo" path="res://Systems/UserInterface/Inventory/Equipment/equipment_ui.gd" id="2_l76kd"]
[ext_resource type="Script" uid="uid://blpcw14f670oa" path="res://Systems/UserInterface/Hover/inventory_slot_tooltip.gd" id="2_o2au4"]
[ext_resource type="Script" uid="uid://b6inlwi1vbqty" path="res://Systems/UserInterface/Inventory/stats_panel.gd" id="3_5wtj6"]

[node name="InventoryUi" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_sp84r")

[node name="EquipmentPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 55.0
script = ExtResource("2_l76kd")

[node name="EquipmentGrid" type="GridContainer" parent="EquipmentPanel"]
layout_mode = 0
offset_top = 23.0
offset_bottom = 23.0

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 321.0
offset_right = 58.0
offset_bottom = 361.0
mouse_filter = 1

[node name="InventoryGrid" type="GridContainer" parent="InventoryPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 154.0
offset_top = 5.0
offset_right = 286.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(1, 0.8666667, 0.33333334, 1)
text = "Gold: 0"
horizontal_alignment = 2

[node name="MassLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 5.0
offset_right = 150.0
offset_bottom = 28.0
text = "Mass: 0.0 / 10.0"

[node name="StatsPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 39.0
offset_right = 339.0
offset_bottom = 69.0
script = ExtResource("3_5wtj6")

[node name="HeroNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Hero Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotTooltip" type="Control" parent="."]
anchors_preset = 0
offset_left = -98.0
offset_top = 427.0
offset_right = -58.0
offset_bottom = 467.0
mouse_filter = 1
script = ExtResource("2_o2au4")

[node name="TooltipPanel" type="PanelContainer" parent="SlotTooltip"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemLabel" type="Label" parent="SlotTooltip/TooltipPanel"]
layout_mode = 2
horizontal_alignment = 1
